--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,20 +9,10 @@
         android:id="@+id/FirstFragment"
         android:name="com.dewerro.measurer.LoginFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_login">
-
-        <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_login"/>
     <fragment
         android:id="@+id/SecondFragment"
         android:name="com.dewerro.measurer.ARFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_ar">
-
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_ar"/>
 </navigation>
