--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple"
-    tools:context=".LoginFragment">
+    tools:context=".SignUpFragment">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/login_logo"
@@ -46,10 +46,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:text="@string/welcome_back"
+                android:text="@string/let_s_create_new_account"
                 android:textSize="30sp"
                 android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@id/form_linear_layout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -100,15 +101,8 @@
                     android:layout_width="300dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="30dp"
-                    android:text="@string/log_in"
+                    android:text="@string/create"
                     app:cornerRadius="10dp" />
-
-                <com.google.android.material.button.MaterialButton
-                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
-                    android:layout_width="150dp"
-                    android:layout_height="50dp"
-                    android:text="@string/sign_up"
-                    android:textColor="@color/purple" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
