--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,16 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/LoginFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/LoginFragment"
         android:name="com.dewerro.measurer.LoginFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_login"/>
+        tools:layout="@layout/fragment_login">
+        <action
+            android:id="@+id/action_LoginFragment_to_SignupFragment"
+            app:destination="@id/SignupFragment" />
+    </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
+        android:id="@+id/SignupFragment"
+        android:name="com.dewerro.measurer.SignUpFragment"
+        tools:layout="@layout/fragment_sign_up"
+        />
+    <fragment
+        android:id="@+id/ARFragment"
         android:name="com.dewerro.measurer.ARFragment"
-        android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_ar"/>
 </navigation>
