--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -38,10 +38,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -106,12 +102,10 @@
                     style="@style/Widget.AppCompat.Button.Borderless.Colored"
                     android:layout_width="150dp"
                     android:layout_height="50dp"
-                    android:text="@string/sign_up"
-                    android:textColor="?colorPrimary" />
+                    android:textColor="?colorPrimary"
+                    android:text="@string/sign_up" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
