--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,13 +12,24 @@
         <action
             android:id="@+id/action_LoginFragment_to_SignupFragment"
             app:destination="@id/SignupFragment" />
+        <action
+            android:id="@+id/action_LoginFragment_to_SelectImageFragment"
+            app:destination="@id/SelectImageFragment" />
     </fragment>
     <fragment
         android:id="@+id/SignupFragment"
         android:name="com.dewerro.measurer.SignUpFragment"
         tools:layout="@layout/fragment_sign_up" />
     <fragment
+        android:id="@+id/SelectImageFragment"
+        android:name="com.dewerro.measurer.SelectImageFragment"
+        tools:layout="@layout/fragment_select_image" >
+        <action
+            android:id="@+id/action_SelectImageFragment_to_ARFragment"
+            app:destination="@id/ARFragment" />
+    </fragment>
+    <fragment
         android:id="@+id/ARFragment"
         android:name="com.dewerro.measurer.ARFragment"
-        tools:layout="@layout/fragment_ar"/>
+        tools:layout="@layout/fragment_ar" />
 </navigation>
