--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -23,13 +23,49 @@
         android:id="@+id/image_to_paint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/image_center_guideline"
         app:layout_constraintTop_toBottomOf="@id/image_toolbar" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/image_center_guideline"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        app:layout_constraintGuide_percent="1.4" />
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/select_scale_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/select_scale"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image_to_paint" />
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/slider"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:value="50"
+        android:valueFrom="0"
+        android:valueTo="100"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/select_scale_text_view" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/image_clear_button"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="@string/clear"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/image_next_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/slider" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/image_next_button"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:enabled="false"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/image_clear_button"
+        app:layout_constraintTop_toBottomOf="@id/slider" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
