--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -11,12 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?colorPrimary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navigationIcon="@drawable/ic_baseline_arrow_back"
         app:navigationIconTint="?colorOnPrimary"
         app:title="@string/place_4_dots"
+        app:titleCentered="true"
         app:titleTextColor="?colorOnPrimary" />
 
     <com.google.android.material.imageview.ShapeableImageView
