--- a/app/src/main/res/layout/fragment_measure.xml
+++ b/app/src/main/res/layout/fragment_measure.xml
@@ -43,6 +43,7 @@
                 android:id="@+id/area_edit_text"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:inputType="none"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -66,6 +67,7 @@
                 android:id="@+id/height_edit_text"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -89,6 +91,7 @@
                 android:id="@+id/width_edit_text"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:inputType="number"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -112,6 +115,7 @@
                 android:id="@+id/material_edit_text"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
