--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -21,7 +21,7 @@
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/image_to_paint"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="500dp"
         app:layout_constraintTop_toBottomOf="@id/image_toolbar" />
 
     <com.google.android.material.textview.MaterialTextView
