--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,9 +38,21 @@
     <fragment
         android:id="@+id/ARFragment"
         android:name="com.dewerro.measurer.ARFragment"
-        tools:layout="@layout/fragment_ar" />
+        tools:layout="@layout/fragment_ar" >
+        <action
+            android:id="@+id/action_ARFragment_to_MeasureFragment"
+            app:destination="@id/MeasureFragment" />
+    </fragment>
     <fragment
         android:id="@+id/ImageFragment"
         android:name="com.dewerro.measurer.ImageFragment"
-        tools:layout="@layout/fragment_image" />
+        tools:layout="@layout/fragment_image" >
+        <action
+            android:id="@+id/action_ImageFragment_to_MeasureFragment"
+            app:destination="@id/MeasureFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/MeasureFragment"
+        android:name="com.dewerro.measurer.MeasureFragment"
+        tools:layout="@layout/fragment_measure" />
 </navigation>
