Measurement visualization in ImageFragment.kt

--- a/app/src/main/res/layout/fragment_image.xml
+++ b/app/src/main/res/layout/fragment_image.xml
@@ -18,7 +18,7 @@
         app:titleCentered="true"
         app:titleTextColor="?colorOnPrimary" />
 
-    <com.google.android.material.imageview.ShapeableImageView
+    <com.dewerro.measurer.view.MeasurerImageView
         android:id="@+id/image_to_paint"
         android:layout_width="match_parent"
         android:layout_height="500dp"
