--- a/app/src/main/res/layout/fragment_ar.xml
+++ b/app/src/main/res/layout/fragment_ar.xml
@@ -4,43 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/design_default_color_primary"
     tools:context=".ARFragment">
 
-    <LinearLayout
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/ar_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:background="?colorPrimary"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_baseline_arrow_back"
+        app:navigationIconTint="?colorOnPrimary"
+        app:title="@string/place_dots"
+        app:titleCentered="true"
+        app:titleTextColor="?colorOnPrimary" />
 
-        <androidx.fragment.app.FragmentContainerView android:name="com.dewerro.measurer.view.MeasurerArFragment"
-            android:id="@+id/sceneform_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="9"/>
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/sceneform_fragment"
+        android:name="com.dewerro.measurer.view.MeasurerArFragment"
+        android:layout_width="match_parent"
+        android:layout_height="600dp"
+        app:layout_constraintTop_toBottomOf="@id/ar_toolbar" />
 
-        <TextView
-            android:id="@+id/distance_view"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.5"
-            android:layout_gravity="bottom"
-            android:gravity="center"
-            android:padding="8dp"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/ar_clear_button"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:text="@string/clear"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/ar_next_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sceneform_fragment" />
 
-        <Button
-            android:id="@+id/clearButton"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.5"
-            android:background="#18489B"
-            android:fontFamily="sans-serif-thin"
-            android:text="@string/clear"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"
-            android:textSize="14sp" />
-
-    </LinearLayout>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/ar_next_button"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:enabled="false"
+        android:text="@string/next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/ar_clear_button"
+        app:layout_constraintTop_toBottomOf="@id/sceneform_fragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
