--- a/app/src/main/res/layout/fragment_measure.xml
+++ b/app/src/main/res/layout/fragment_measure.xml
@@ -7,6 +7,7 @@
     tools:context=".MeasureFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/measurement_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?colorPrimary"
@@ -18,6 +19,7 @@
         app:titleTextColor="?colorOnPrimary" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
