--- a/app/src/main/res/layout/point_text_layout.xml
+++ b/app/src/main/res/layout/point_text_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_weight="1"
-    android:background="#BFFFFFFF"
+    android:background="@drawable/point_text_drawable"
     android:gravity="center"
     android:padding="6dp"
-    android:textSize="10sp" />
+    android:textSize="11sp" />
