--- a/app/src/main/res/layout/fragment_select_image.xml
+++ b/app/src/main/res/layout/fragment_select_image.xml
@@ -13,6 +13,7 @@
         android:layout_margin="10dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_baseline_logout"
+        android:tint="?colorOnSurface"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,6 +26,7 @@
         android:textAlignment="center"
         android:textSize="32sp"
         android:textStyle="bold"
+        android:tint="?colorOnSurface"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,6 +38,7 @@
         android:layout_marginTop="50dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_outline_add_a_photo"
+        android:tint="?colorOnSurface"
         app:layout_constraintEnd_toStartOf="@id/measure_with_image"
         app:layout_constraintStart_toStartOf="@id/select_text_view"
         app:layout_constraintTop_toBottomOf="@id/select_text_view" />
@@ -45,6 +48,7 @@
         android:layout_height="wrap_content"
         android:text="@string/augmented_reality"
         android:textStyle="bold"
+        android:tint="?colorOnSurface"
         app:layout_constraintEnd_toEndOf="@id/measure_with_ar_button"
         app:layout_constraintStart_toStartOf="@id/measure_with_ar_button"
         app:layout_constraintTop_toBottomOf="@id/measure_with_ar_button" />
@@ -56,6 +60,7 @@
         android:layout_marginTop="50dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_outline_image"
+        android:tint="?colorOnSurface"
         app:layout_constraintEnd_toEndOf="@id/select_text_view"
         app:layout_constraintStart_toEndOf="@id/measure_with_ar_button"
         app:layout_constraintTop_toBottomOf="@id/select_text_view" />
@@ -65,6 +70,7 @@
         android:layout_height="wrap_content"
         android:text="@string/image_from_gallery"
         android:textStyle="bold"
+        android:tint="?colorOnSurface"
         app:layout_constraintEnd_toEndOf="@id/measure_with_image"
         app:layout_constraintStart_toStartOf="@id/measure_with_image"
         app:layout_constraintTop_toBottomOf="@id/measure_with_image" />
