--- a/app/src/main/res/layout/distance_text_layout.xml
+++ b/app/src/main/res/layout/distance_text_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#BFFFFFFF"
-    tools:context=".ARFragment">
+    tools:context=".fragments.ARFragment">
 
     <TextView
         android:id="@+id/distanceCard"
