--- a/app/src/main/res/layout/fragment_ar.xml
+++ b/app/src/main/res/layout/fragment_ar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ARFragment">
+    tools:context=".fragments.ARFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/ar_toolbar"
