--- a/app/src/main/res/layout/fragment_ar.xml
+++ b/app/src/main/res/layout/fragment_ar.xml
@@ -49,11 +49,11 @@
         app:layout_constraintStart_toEndOf="@id/ar_clear_button" />
 
     <TextView
-        android:id="@+id/arAreaTextView"
+        android:id="@+id/ar_area_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:textColor="#000000"
+        android:layout_marginTop="50dp"
+        android:textColor="?colorOnPrimary"
         android:textSize="22sp"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
