--- a/app/src/main/res/layout/fragment_select_image.xml
+++ b/app/src/main/res/layout/fragment_select_image.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/select_text_view"
+        android:id="@+id/loading_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
@@ -40,8 +40,8 @@
         android:src="@drawable/ic_outline_add_a_photo"
         android:tint="?colorOnSurface"
         app:layout_constraintEnd_toStartOf="@id/measure_with_image"
-        app:layout_constraintStart_toStartOf="@id/select_text_view"
-        app:layout_constraintTop_toBottomOf="@id/select_text_view" />
+        app:layout_constraintStart_toStartOf="@id/loading_text"
+        app:layout_constraintTop_toBottomOf="@id/loading_text" />
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
@@ -61,9 +61,9 @@
         android:background="@android:color/transparent"
         android:src="@drawable/ic_outline_image"
         android:tint="?colorOnSurface"
-        app:layout_constraintEnd_toEndOf="@id/select_text_view"
+        app:layout_constraintEnd_toEndOf="@id/loading_text"
         app:layout_constraintStart_toEndOf="@id/measure_with_ar_button"
-        app:layout_constraintTop_toBottomOf="@id/select_text_view" />
+        app:layout_constraintTop_toBottomOf="@id/loading_text" />
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
