--- a/app/src/main/res/layout/fragment_order_processing.xml
+++ b/app/src/main/res/layout/fragment_order_processing.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.RequestLoadingFragment">
+    tools:context=".fragments.order.OrderProcessingFragment">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/loading_text"
+        android:id="@+id/loading_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="356dp"
@@ -32,6 +32,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loading_text" />
+        app:layout_constraintTop_toBottomOf="@+id/loading_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
