--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -56,6 +56,40 @@
     </fragment>
     <fragment
         android:id="@+id/MeasureFragment"
-        android:name="com.dewerro.measurer.MeasureFragment"
-        tools:layout="@layout/fragment_measure" />
+        android:name="com.dewerro.measurer.fragments.MeasureFragment"
+        tools:layout="@layout/fragment_measure" >
+        <action
+            android:id="@+id/action_MeasureFragment_to_OrderProcessingFragment"
+            app:destination="@id/OrderProcessingFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/OrderProcessingFragment"
+        android:name="com.dewerro.measurer.fragments.order.OrderProcessingFragment"
+        tools:layout="@layout/fragment_order_processing" >
+        <action
+            android:id="@+id/action_OrderProcessingFragment_to_OrderSuccessFragment"
+            app:destination="@id/OrderSuccessFragment" />
+        <action
+            android:id="@+id/action_OrderProcessingFragment_to_OrderFailureFragment"
+            app:destination="@id/OrderFailureFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/OrderFailureFragment"
+        android:name="com.dewerro.measurer.fragments.order.OrderFailureFragment"
+        tools:layout="@layout/fragment_order_failure" >
+        <action
+            android:id="@+id/action_OrderFailureFragment_to_OrderProcessingFragment"
+            app:destination="@id/OrderProcessingFragment" />
+        <action
+            android:id="@+id/action_OrderFailureFragment_to_SelectImageFragment"
+            app:destination="@id/SelectImageFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/OrderSuccessFragment"
+        android:name="com.dewerro.measurer.fragments.order.OrderSuccessFragment"
+        tools:layout="@layout/fragment_order_success" >
+        <action
+            android:id="@+id/action_OrderSuccessFragment_to_SelectImageFragment"
+            app:destination="@id/SelectImageFragment" />
+    </fragment>
 </navigation>
